--- a/Day-5(Movie App)/src/index.css
+++ b/Day-5(Movie App)/src/index.css
@@ -13,56 +13,77 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.dark{
+    color: black;
 }
-a:hover {
-  color: #535bf2;
+.bold{
+    font-weight: 600
 }
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.main{
+    width: 60%;
+    margin: auto;
+    /* border: 2px solid red; */
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.movie_card{
+    background-color: #fff;
+    padding: 3px;
+    display: flex;
+    border-radius: 7px;
+}
+.left_section{
+    /* border: 2px solid red; */
+    display: inline-block;
+}
+.left_section img{
+    position: relative;
+    top: 4px;
+    width: 200px;
+    height: auto;
+}
+.right_section{
+    width: 100%;
+    padding: 0 2rem 2rem 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.movie_title{
+    font-size: 2rem;
+    font-weight: 600;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.movie_foot{
+    display: flex;
+    justify-content: space-between;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.btn{
+    padding: 6px 12px;
+    border: 1px solid #fff;
+    border-radius: 3px;
+    cursor: pointer;
 }
+
+.fav_btn{
+    margin-right: 0.5rem;
+    background-color: orange;
+    color: #fff;
+    transition: all 600ms;
+}
+.fav_btn:hover{
+    border-color: orange;
+    background-color: #fff;
+    color: black;
+}
+.buy_btn{
+    background-color: blue;
+    color: #fff;
+    transition: 600ms;
+}
+.buy_btn:hover{
+    color: black;
+    border-color: blue;
+    background-color: #fff;
+}
+
