--- a/Day-5(Movie App)/src/index.css
+++ b/Day-5(Movie App)/src/index.css
@@ -23,10 +23,11 @@
 
 /******** Navbar ***********/
 
-nav{
-    background-color: #ff006e;
+/* nav{
+    background-image: linear-gradient(120deg, #5d34f1 0%, #f5576c 100%);
     padding: 20px;
-}
+} */
+
 nav p{
     font-size: 1.3rem;
     font-weight: 600;
@@ -55,6 +56,7 @@ nav p{
 .left_section{
     /* border: 2px solid red; */
     display: inline-block;
+    visibility: hidden;
 }
 .left_section img{
     position: relative;
